--- a/bower.json
+++ b/bower.json
@@ -25,8 +25,9 @@
     "tests"
   ],
   "dependencies": {
+    "angular": "~1.4.5",
+    "angular-bootstrap": "~0.13.4",
     "angular-route": "~1.4.5",
-    "angular-sanitize": "~1.4.5",
-    "angular": "~1.4.5"
+    "angular-sanitize": "~1.4.5"
   }
 }
